--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ scikit-learn==0.20.2
 scipy==1.1.0
 seaborn==0.9.0
 tensorboard-logger==0.1.0
-tensorflow==1.7.1
+tensorflow>=1.12.1
 Theano==1.0.3
 torch==1.0.1
 torchvision==0.2.1
